--- a/package.json
+++ b/package.json
@@ -7,30 +7,127 @@
     "build": "next build",
     "start": "next start",
     "codegen": "graphql-codegen --config codegen.yml",
+    "build:workers:watch": "node --max_old_space_size=7168 node_modules/webpack-cli/bin/cli --config ./config/webpack-workers.js --watch",
     "test": "jest"
   },
   "dependencies": {
     "@apollo/client": "3.3.20",
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.14.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@babel/standalone": "^7.14.8",
+    "@chakra-ui/icons": "^1.0.13",
+    "@chakra-ui/react": "^1.6.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@fontsource/roboto": "^4.4.5",
+    "@freecodecamp/loop-protect": "^2.2.1",
+    "@freecodecamp/strip-comments": "^3.0.1",
+    "@monaco-editor/react": "^4.2.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "11.2.7",
+    "@testing-library/user-event": "^12.1.10",
     "@types/cookie": "0.4.0",
     "@types/jest": "26.0.23",
     "@types/react": "17.0.11",
+    "@types/react-redux": "^7.1.18",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
     "apollo-link-context": "1.0.20",
+    "assert-polyfill": "^0.0.0",
+    "axios": "^0.21.1",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "27.0.5",
+    "babel-loader": "8.1.0",
     "babel-plugin-graphql-tag": "3.3.0",
+    "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-preset-react-app": "^10.0.0",
+    "bfj": "^7.0.2",
+    "buffer": "^6.0.3",
+    "camelcase": "^6.1.0",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "chai": "^4.3.4",
+    "chakra-ui": "^0.3.9",
+    "cheerio": "^1.0.0-rc.10",
     "cookie": "0.4.1",
+    "copy-webpack-plugin": "6.3.2",
+    "css-loader": "4.3.0",
+    "deepmerge": "^4.2.2",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^7.11.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^3.9.2",
+    "eslint-webpack-plugin": "^2.5.2",
+    "file-loader": "6.1.1",
+    "framer-motion": "^4",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^9.0.1",
     "graphql": "15.5.1",
     "graphql-tag": "2.12.4",
+    "html-webpack-plugin": "4.5.0",
     "i18next": "20.3.2",
+    "identity-obj-proxy": "3.0.0",
     "jest": "27.0.5",
+    "jest-circus": "26.6.0",
+    "jest-resolve": "26.6.0",
+    "jest-watch-typeahead": "0.6.1",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "mini-css-extract-plugin": "0.11.3",
+    "monaco-editor-webpack-plugin": "^3.1.0",
+    "monaco-themes": "^0.3.3",
     "next": "11.0.1",
     "normalize.css": "8.0.1",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "path": "^0.12.7",
+    "pnp-webpack-plugin": "1.6.4",
+    "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "8.0.1",
+    "postcss-preset-env": "6.7.0",
+    "postcss-safe-parser": "5.0.2",
+    "prompts": "2.4.0",
     "react": "17.0.2",
+    "react-app-polyfill": "^2.0.0",
+    "react-dev-utils": "^11.0.3",
     "react-dom": "17.0.2",
     "react-i18next": "11.11.0",
+    "react-monaco-editor": "^0.43.0",
+    "react-redux": "^7.2.4",
+    "react-refresh": "^0.8.3",
+    "resolve": "1.18.1",
+    "resolve-url-loader": "^3.1.2",
     "sass": "1.35.1",
-    "typescript": "4.3.4"
+    "sass-loader": "^10.0.5",
+    "sass.js": "^0.11.1",
+    "semver": "7.3.2",
+    "style-loader": "1.3.0",
+    "terser-webpack-plugin": "4.2.3",
+    "ts-pnp": "1.2.0",
+    "typescript": "4.3.4",
+    "url-loader": "4.1.1",
+    "web-vitals": "^1.0.1",
+    "webpack": "4.44.2",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "3.11.1",
+    "webpack-manifest-plugin": "2.2.0",
+    "webpack5": "npm:webpack@5.51.1",
+    "workbox-webpack-plugin": "5.1.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.8",
@@ -38,6 +135,7 @@
     "@graphql-codegen/typescript": "1.23.0",
     "@graphql-codegen/typescript-operations": "1.18.4",
     "@graphql-codegen/typescript-react-apollo": "2.3.1",
+    "@types/lodash-es": "^4.17.4",
     "graphql-codegen-apollo-next-ssr": "^1.6.1",
     "prettier": "2.3.1"
   }
