--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react-redux": "^7.2.4",
     "react-refresh": "^0.8.3",
     "resolve": "1.18.1",
+    "resolve-ts-aliases": "^1.0.1",
     "resolve-url-loader": "^3.1.2",
     "sass": "1.35.1",
     "sass-loader": "^10.0.5",
@@ -126,6 +127,7 @@
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "3.11.1",
     "webpack-manifest-plugin": "2.2.0",
+    "webpack-merge": "^5.8.0",
     "webpack5": "npm:webpack@5.51.1",
     "workbox-webpack-plugin": "5.1.4"
   },
