--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react-redux": "^7.1.18",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "apollo-link": "^1.2.14",
     "apollo-link-context": "1.0.20",
     "assert-polyfill": "^0.0.0",
     "axios": "^0.21.1",
@@ -92,6 +93,7 @@
     "monaco-editor-webpack-plugin": "^3.1.0",
     "monaco-themes": "^0.3.3",
     "next": "11.0.1",
+    "next-with-apollo": "^5.2.1",
     "normalize.css": "8.0.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "path": "^0.12.7",
