--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "monaco-editor-webpack-plugin": "^3.1.0",
     "monaco-themes": "^0.3.3",
     "next": "11.0.1",
+    "next-transpile-modules": "^8.0.0",
     "next-with-apollo": "^5.2.1",
     "normalize.css": "8.0.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
@@ -103,15 +104,19 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
+    "prism-react-renderer": "^1.2.1",
     "prompts": "2.4.0",
     "react": "17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.3",
     "react-dom": "17.0.2",
     "react-i18next": "11.11.0",
+    "react-markdown": "^7.0.1",
     "react-monaco-editor": "^0.43.0",
     "react-redux": "^7.2.4",
     "react-refresh": "^0.8.3",
+    "react-syntax-highlighter": "^15.4.4",
+    "remark-prism": "^1.3.6",
     "resolve": "1.18.1",
     "resolve-ts-aliases": "^1.0.1",
     "resolve-url-loader": "^3.1.2",
