--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/standalone": "^7.14.8",
+    "@callstack/react-theme-provider": "^3.0.6",
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11",
@@ -26,6 +27,10 @@
     "@fontsource/roboto": "^4.4.5",
     "@freecodecamp/loop-protect": "^2.2.1",
     "@freecodecamp/strip-comments": "^3.0.1",
+    "@linaria/babel-preset": "^3.0.0-beta.12",
+    "@linaria/core": "^3.0.0-beta.4",
+    "@linaria/react": "^3.0.0-beta.7",
+    "@linaria/shaker": "^3.0.0-beta.12",
     "@monaco-editor/react": "^4.2.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "^5.5.0",
@@ -44,7 +49,7 @@
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "27.0.5",
-    "babel-loader": "8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-graphql-tag": "3.3.0",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
@@ -57,7 +62,7 @@
     "cheerio": "^1.0.0-rc.10",
     "cookie": "0.4.1",
     "copy-webpack-plugin": "6.3.2",
-    "css-loader": "4.3.0",
+    "css-loader": "^6.2.0",
     "deepmerge": "^4.2.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -73,7 +78,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.9.2",
     "eslint-webpack-plugin": "^2.5.2",
-    "file-loader": "6.1.1",
+    "file-loader": "^6.2.0",
     "framer-motion": "^4",
     "fs": "^0.0.1-security",
     "fs-extra": "^9.0.1",
@@ -87,12 +92,15 @@
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "jquery": "^3.6.0",
+    "linaria": "^2.1.0",
+    "localstorage": "^1.0.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "mini-css-extract-plugin": "0.11.3",
+    "mini-css-extract-plugin": "^2.3.0",
     "monaco-editor-webpack-plugin": "^3.1.0",
     "monaco-themes": "^0.3.3",
     "next": "11.0.1",
+    "next-linaria": "^0.11.0",
     "next-transpile-modules": "^8.0.0",
     "next-with-apollo": "^5.2.1",
     "normalize.css": "8.0.1",
@@ -130,9 +138,9 @@
     "typescript": "4.3.4",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
-    "webpack": "4.44.2",
+    "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "3.11.1",
+    "webpack-dev-server": "^4.2.0",
     "webpack-manifest-plugin": "2.2.0",
     "webpack-merge": "^5.8.0",
     "webpack5": "npm:webpack@5.51.1",
@@ -144,6 +152,7 @@
     "@graphql-codegen/typescript": "1.23.0",
     "@graphql-codegen/typescript-operations": "1.18.4",
     "@graphql-codegen/typescript-react-apollo": "2.3.1",
+    "@linaria/webpack-loader": "^3.0.0-beta.12",
     "@types/lodash-es": "^4.17.4",
     "graphql-codegen-apollo-next-ssr": "^1.6.1",
     "prettier": "2.3.1"
