--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "codegen": "graphql-codegen --config codegen.yml",
     "build:workers:watch": "node --max_old_space_size=7168 node_modules/webpack-cli/bin/cli --config ./config/webpack-workers.js --watch",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@apollo/client": "3.3.20",
@@ -153,6 +155,12 @@
     "@graphql-codegen/typescript-operations": "1.18.4",
     "@graphql-codegen/typescript-react-apollo": "2.3.1",
     "@linaria/webpack-loader": "^3.0.0-beta.12",
+    "@storybook/addon-actions": "^6.4.0-alpha.35",
+    "@storybook/addon-essentials": "^6.4.0-alpha.35",
+    "@storybook/addon-links": "^6.4.0-alpha.35",
+    "@storybook/builder-webpack5": "^6.4.0-alpha.35",
+    "@storybook/manager-webpack5": "^6.4.0-alpha.35",
+    "@storybook/react": "^6.4.0-alpha.35",
     "@types/lodash-es": "^4.17.4",
     "graphql-codegen-apollo-next-ssr": "^1.6.1",
     "prettier": "2.3.1"
