add more theming, text, links, about to move away from linaria

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,12 @@
 {
-  "presets": ["next/babel"],
-  "plugins": [["graphql-tag"]]
+  "presets": ["next/babel", "@linaria"],
+  "plugins": [
+    ["graphql-tag"],
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
+        "runtime": "automatic"
+      }
+    ]
+  ]
 }
