--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chai": "^4.3.4",
     "chakra-ui": "^0.3.9",
     "cheerio": "^1.0.0-rc.10",
+    "clsx": "^1.1.1",
     "cookie": "0.4.1",
     "copy-webpack-plugin": "6.3.2",
     "css-loader": "^6.2.0",
@@ -149,6 +150,7 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@graphql-codegen/cli": "1.21.8",
     "@graphql-codegen/import-types-preset": "1.18.6",
     "@graphql-codegen/typescript": "1.23.0",
@@ -162,6 +164,7 @@
     "@storybook/manager-webpack5": "^6.4.0-alpha.35",
     "@storybook/react": "^6.4.0-alpha.35",
     "@types/lodash-es": "^4.17.4",
+    "csstype": "^3.0.9",
     "graphql-codegen-apollo-next-ssr": "^1.6.1",
     "prettier": "2.3.1"
   }
