--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,10 @@
     }
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/components/SublessonInstructions/SublessonInstructions.styles.js"
+  ]
 }
