--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,5 @@
     }
   },
   "exclude": ["node_modules"],
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "src/components/SublessonInstructions/SublessonInstructions.styles.js"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
