--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@callstack/react-theme-provider": "^3.0.6",
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.6",
-    "@emotion/react": "^11",
+    "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11",
     "@fontsource/roboto": "^4.4.5",
     "@freecodecamp/loop-protect": "^2.2.1",
@@ -151,6 +151,7 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@emotion/babel-plugin": "^11.3.0",
     "@graphql-codegen/cli": "1.21.8",
     "@graphql-codegen/import-types-preset": "1.18.6",
     "@graphql-codegen/typescript": "1.23.0",
