--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "sass-loader": "^10.0.5",
     "sass.js": "^0.11.1",
     "semver": "7.3.2",
+    "strapi-plugin-import-export-content": "^0.4.1",
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
