--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "next-advanced-apollo-starter",
-  "version": "1.0.0",
-  "license": "MIT",
+  "name": "anyone-can-code-new-frontend",
+  "version": "0.0.0",
   "scripts": {
-    "dev": "next dev -p 4000",
-    "format": "yarn prettier --write .",
-    "build": "next build",
-    "start": "next start",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
     "codegen": "graphql-codegen --config codegen.yml",
     "build:workers:watch": "node --max_old_space_size=7168 node_modules/webpack-cli/bin/cli --config ./config/webpack-workers.js --watch",
-    "test": "jest",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "format": "yarn prettier --write ."
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.4",
-    "@apollo/client": "3.3.20",
+    "@apollo/client": "^3.4.16",
     "@babel/core": "^7.15.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/polyfill": "^7.12.1",
@@ -35,13 +31,7 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@freecodecamp/loop-protect": "^2.2.1",
     "@freecodecamp/strip-comments": "^3.0.1",
-    "@linaria/babel-preset": "^3.0.0-beta.12",
-    "@linaria/core": "^3.0.0-beta.4",
-    "@linaria/react": "^3.0.0-beta.7",
-    "@linaria/shaker": "^3.0.0-beta.12",
     "@monaco-editor/react": "^4.2.1",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
-    "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "^12.1.10",
@@ -49,8 +39,10 @@
     "@types/jest": "26.0.23",
     "@types/react": "17.0.11",
     "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.3.1",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "apollo-boost": "^0.4.9",
     "apollo-link": "^1.2.14",
     "apollo-link-context": "1.0.20",
     "assert-polyfill": "^0.0.0",
@@ -64,13 +56,11 @@
     "bfj": "^7.0.2",
     "buffer": "^6.0.3",
     "camelcase": "^6.1.0",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "chai": "^4.3.4",
     "chakra-ui": "^0.3.9",
     "cheerio": "^1.0.0-rc.10",
     "clsx": "^1.1.1",
     "cookie": "0.4.1",
-    "copy-webpack-plugin": "6.3.2",
     "css-loader": "^6.2.0",
     "deepmerge": "^4.2.2",
     "dotenv": "8.2.0",
@@ -86,15 +76,13 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.9.2",
-    "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "^6.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^4",
     "fs": "^0.0.1-security",
     "fs-extra": "^9.0.1",
-    "graphql": "15.5.1",
+    "graphql": "^15.6.1",
     "graphql-tag": "2.12.4",
-    "html-webpack-plugin": "4.5.0",
     "i18next": "20.3.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.0.5",
@@ -102,22 +90,14 @@
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "jquery": "^3.6.0",
-    "linaria": "^2.1.0",
     "localstorage": "^1.0.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.3.0",
-    "monaco-editor-webpack-plugin": "^3.1.0",
     "monaco-themes": "^0.3.3",
-    "next": "11.0.1",
-    "next-linaria": "^0.11.0",
-    "next-transpile-modules": "^8.0.0",
-    "next-with-apollo": "^5.2.1",
     "normalize.css": "8.0.1",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
     "p-map": "4.0.0",
     "path": "^0.12.7",
-    "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
@@ -125,16 +105,18 @@
     "postcss-safe-parser": "5.0.2",
     "prism-react-renderer": "^1.2.1",
     "prompts": "2.4.0",
-    "react": "17.0.2",
+    "react": "^17.0.0",
+    "react-apollo": "^3.1.5",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.3",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.0",
     "react-i18next": "11.11.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^7.0.1",
     "react-monaco-editor": "^0.43.0",
     "react-redux": "^7.2.4",
     "react-refresh": "^0.8.3",
+    "react-router-dom": "^5.3.0",
     "react-syntax-highlighter": "^15.4.4",
     "remark-prism": "^1.3.6",
     "resolve": "1.18.1",
@@ -146,38 +128,29 @@
     "semver": "7.3.2",
     "strapi-plugin-import-export-content": "^0.4.1",
     "style-loader": "1.3.0",
-    "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
     "typescript": "4.3.4",
     "url-loader": "4.1.1",
-    "web-vitals": "^1.0.1",
-    "webpack": "^5.52.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.0",
-    "webpack-manifest-plugin": "2.2.0",
-    "webpack-merge": "^5.8.0",
-    "webpack5": "npm:webpack@5.51.1",
-    "workbox-webpack-plugin": "5.1.4"
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@emotion/babel-plugin": "^11.3.0",
-    "@graphql-codegen/cli": "1.21.8",
+    "@graphql-codegen/cli": "2.2.1",
     "@graphql-codegen/import-types-preset": "1.18.6",
-    "@graphql-codegen/typescript": "1.23.0",
-    "@graphql-codegen/typescript-operations": "1.18.4",
-    "@graphql-codegen/typescript-react-apollo": "2.3.1",
-    "@linaria/webpack-loader": "^3.0.0-beta.12",
-    "@storybook/addon-actions": "^6.4.0-alpha.35",
-    "@storybook/addon-essentials": "^6.4.0-alpha.35",
-    "@storybook/addon-links": "^6.4.0-alpha.35",
-    "@storybook/builder-webpack5": "^6.4.0-alpha.35",
-    "@storybook/manager-webpack5": "^6.4.0-alpha.35",
-    "@storybook/react": "^6.4.0-alpha.35",
+    "@graphql-codegen/introspection": "2.1.0",
+    "@graphql-codegen/typescript": "2.2.4",
+    "@graphql-codegen/typescript-operations": "2.1.8",
+    "@graphql-codegen/typescript-react-apollo": "3.1.6",
     "@trivago/prettier-plugin-sort-imports": "^2.0.4",
     "@types/lodash-es": "^4.17.4",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@vitejs/plugin-react": "^1.0.0",
     "csstype": "^3.0.9",
-    "graphql-codegen-apollo-next-ssr": "^1.6.1",
-    "prettier": "2.3.1"
+    "prettier": "2.3.1",
+    "typescript": "^4.3.2",
+    "vite": "^2.6.4",
+    "vite-aliases": "^0.8.7"
   }
 }
