--- a/codegen.yml
+++ b/codegen.yml
@@ -1,7 +1,5 @@
 overwrite: true
-schema:
-  - client-schema.graphql
-  - http://localhost:1337/graphql
+schema: 'http://localhost:1337/graphql'
 documents:
   - 'src/**/*.graphql'
   - 'src/**/*.query.tsx'
@@ -16,23 +14,6 @@ generates:
       withHooks: true
       withHOC: false
       withComponent: false
-      exportFragmentSpreadSubTypes: true
-      documentMode: graphQLTag
-  src/generated/page.tsx:
-    config:
-      documentMode: external
-      importDocumentNodeExternallyFrom: ./graphql
-      reactApolloVersion: 3
-      withHooks: true
-      # withHOC: false
-      # excludePatterns: 'getComments'
-      # excludePatternsOptions: 'i'
-      # customDataIdFromObjectName: 'test'
-      # customDataIdFromObjectImport: 'abc'
-      apolloClientInstanceImport: '../utils/withApollo'
-      # apolloStateKey: '__APOLLO_STATE__'
-    preset: import-types
-    presetConfig:
-      typesPath: ./graphql
+  ./graphql.schema.json:
     plugins:
-      - 'graphql-codegen-apollo-next-ssr' # replace by - graphql-codegen-apollo-next-ssr
+      - 'introspection'
