--- a/package.json
+++ b/package.json
@@ -146,11 +146,14 @@
     "@types/lodash-es": "^4.17.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/vite-plugin-react-svg": "^0.2.0",
     "@vitejs/plugin-react": "^1.0.0",
     "csstype": "^3.0.9",
     "prettier": "2.3.1",
     "typescript": "^4.3.2",
     "vite": "^2.6.4",
-    "vite-aliases": "^0.8.7"
+    "vite-aliases": "^0.8.7",
+    "vite-babel-plugin": "^0.0.2",
+    "vite-plugin-react-svg": "^0.2.0"
   }
 }
