--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,7 @@
 overwrite: true
-schema: 'http://localhost:1337/graphql'
+schema:
+  - client-schema.graphql
+  - http://localhost:1337/graphql
 documents:
   - 'src/**/*.graphql'
   - 'src/**/*.query.tsx'
@@ -14,6 +16,5 @@ generates:
       withHooks: true
       withHOC: false
       withComponent: false
-  ./graphql.schema.json:
-    plugins:
-      - 'introspection'
+      exportFragmentSpreadSubTypes: true
+      documentMode: graphQLTag
