--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "develop": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
     "codegen": "graphql-codegen --config codegen.yml",
@@ -149,7 +150,9 @@
     "@types/vite-plugin-react-svg": "^0.2.0",
     "@vitejs/plugin-react": "^1.0.0",
     "csstype": "^3.0.9",
+    "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "prettier": "2.3.1",
+    "prettier-plugin-sort-json": "^0.0.2",
     "typescript": "^4.3.2",
     "vite": "^2.6.4",
     "vite-aliases": "^0.8.7",
