--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/cookie": "0.4.0",
     "@types/jest": "26.0.23",
-    "@types/react": "17.0.11",
+    "@types/react": "^17.0.37",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.3.1",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
