--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all",
-  "printWidth": 80,
   "importOrder": ["^src/(.*)$", "^components/(.*)$"],
-  "jsonRecursiveSort": true
+  "jsonRecursiveSort": true,
+  "printWidth": 80,
+  "singleQuote": true,
+  "trailingComma": "all"
 }
