--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:workers:watch": "node --max_old_space_size=7168 node_modules/webpack-cli/bin/cli --config ./config/webpack-workers.js --watch",
     "format": "yarn prettier --write .",
     "lint": "yarn eslint --fix .",
-    "checktypes": "tsc"
+    "checktypes": "tsc",
+    "checktypes:watch": "tsc --watch"
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.4",
