--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,6 +8,11 @@ jobs:
   eslint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: stefanoeb/eslint-action@1.0.2
+      - name: Installation
+      - run: yarn
+      - name: Lint
+      - run: yarn lint:ci
+      
   
