--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,7 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: stefanoeb/eslint-action@1.0.2
+      - uses: actions/setup-node@v2
+      - with: 
+              cache: yarn
       - name: Installation
       - run: yarn
       - name: Lint
