--- a/codegen.yml
+++ b/codegen.yml
@@ -4,7 +4,7 @@ schema:
   - http://localhost:1337/graphql
 documents:
   - 'src/**/*.graphql'
-  - 'src/**/*.query.tsx'
+  - 'src/**/*.query.{ts,tsx}'
 generates:
   src/generated/graphql.tsx:
     plugins:
