--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fontsource/roboto-mono": "^4.5.0",
     "@freecodecamp/loop-protect": "^2.2.1",
     "@freecodecamp/strip-comments": "^3.0.1",
+    "@iconify/react": "^3.1.0",
     "@monaco-editor/react": "^4.2.1",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "11.2.7",
