--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "develop": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview",
+    "serve": "BASE_URL=/anyone-can-code BACKEND_URL=http://143.198.120.197:1337/graphql vite preview",
     "codegen": "graphql-codegen --config codegen.yml",
     "codegen:watch": "graphql-codegen --config codegen.yml --watch",
     "build:workers:watch": "node --max_old_space_size=7168 node_modules/webpack-cli/bin/cli --config ./config/webpack-workers.js --watch",
@@ -126,6 +126,7 @@
     "style-loader": "1.3.0",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
+    "vite-plugin-environment": "^1.0.1",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
