--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "eslint-plugin-testing-library": "^3.9.2",
     "prettier": "2.3.1",
     "prettier-plugin-sort-json": "^0.0.2",
+    "ts-toolbelt": "^9.6.0",
     "typescript": "^4.3.4",
     "vite": "^2.6.4",
     "vite-aliases": "^0.8.7",
