--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,7 +4,6 @@ on:
   push:
   pull_request:
 
-
 jobs:
   run-linters:
     name: Run linters
@@ -22,7 +21,7 @@ jobs:
       - name: Install Node.js dependencies
         run: yarn install
       - name: Lint
-        run: yarn lint:ci
+        run: yarn lint
 
       - name: Run linters
         uses: wearerequired/lint-action@v1
