--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,5 +9,5 @@ jobs:
     name: 'Deploy to Netlify'
     uses: jsmrcaga/action-netlify-deploy@v1.1.0
     with:
-      NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_TOKEN_SECRET }}
+      NETLIFY_AUTH_TOKEN: ewfwefw
       NETLIFY_DEPLOY_TO_PROD: true
