--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      name: 'Deploy to Netlify'
-      uses: jsmrcaga/action-netlify-deploy@v1.1.0
-      with:
-        NETLIFY_AUTH_TOKEN: ewfwefw
-        NETLIFY_DEPLOY_TO_PROD: true
+      - name: Check out Git repository
+        uses: actions/checkout@v2
