--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,5 +10,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      name: 'Deploy to Netlify'
-      uses: actions/checkout@v2
+      - name: 'Deploy to Netlify'
+        uses: jsmrcaga/action-netlify-deploy@v1.1.0
