--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,3 +12,6 @@ jobs:
     steps:
       - name: 'Deploy to Netlify'
         uses: jsmrcaga/action-netlify-deploy@v1.1.0
+        with:
+          NETLIFY_AUTH_TOKEN: ewfwefw
+          NETLIFY_DEPLOY_TO_PROD: true
