--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Lint & prettier!
+name: Deployment!
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   deploy:
-    name: Run linters
+    name: Deploy
     runs-on: ubuntu-latest
 
     steps:
