--- a/codegen.yml
+++ b/codegen.yml
@@ -1,7 +1,7 @@
 overwrite: true
 schema:
   - client-schema.graphql
-  - https://acc-v-4-obk5u.ondigitalocean.app/graphql
+  - ${BACKEND_URL}
 documents:
   - 'src/**/*.graphql'
   - 'src/**/*.query.{ts,tsx}'
