--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "yarn develop",
-    "develop": "BACKEND_URL=https://acc-v-4-obk5u.ondigitalocean.app/graphql vite",
-    "build": "tsc && BACKEND_URL=https://acc-v-4-obk5u.ondigitalocean.app/graphql vite build && cp _redirects dist/_redirects",
-    "serve": "BASE_URL=/anyone-can-code BACKEND_URL=https://acc-v-4-obk5u.ondigitalocean.app/graphql vite preview",
-    "codegen": "graphql-codegen --config codegen.yml",
-    "codegen:watch": "graphql-codegen --config codegen.yml --watch",
+    "develop": "vite",
+    "build": "tsc && vite build && cp _redirects dist/_redirects",
+    "serve": "vite preview",
+    "codegen": "graphql-codegen -r dotenv/config --config codegen.yml",
+    "codegen:watch": "yarn codegen --watch",
     "build:workers:watch": "node --max_old_space_size=7168 node_modules/webpack-cli/bin/cli --config ./config/webpack-workers.js --watch",
     "format": "yarn prettier --write .",
     "lint": "yarn eslint --fix .",
@@ -64,7 +64,7 @@
     "cookie": "0.4.1",
     "css-loader": "^6.2.0",
     "deepmerge": "^4.2.2",
-    "dotenv": "8.2.0",
+    "dotenv": "^16.0.0",
     "dotenv-expand": "5.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
