--- a/package.json
+++ b/package.json
@@ -108,12 +108,13 @@
     "react-dom": "^17.0.0",
     "react-i18next": "11.11.0",
     "react-icons": "^4.3.1",
-    "react-markdown": "^7.0.1",
+    "react-markdown": "^8.0.0",
     "react-monaco-editor": "^0.43.0",
     "react-redux": "^7.2.4",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.3.0",
     "react-syntax-highlighter": "^15.4.4",
+    "remark-gfm": "^3.0.1",
     "remark-prism": "^1.3.6",
     "resolve": "1.18.1",
     "resolve-ts-aliases": "^1.0.1",
