--- a/package.json
+++ b/package.json
@@ -108,13 +108,12 @@
     "react-dom": "^17.0.0",
     "react-i18next": "11.11.0",
     "react-icons": "^4.3.1",
-    "react-markdown": "^8.0.0",
+    "react-markdown": "^7.0.1",
     "react-monaco-editor": "^0.43.0",
     "react-redux": "^7.2.4",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.3.0",
     "react-syntax-highlighter": "^15.4.4",
-    "remark-gfm": "^3.0.1",
     "remark-prism": "^1.3.6",
     "resolve": "1.18.1",
     "resolve-ts-aliases": "^1.0.1",
@@ -123,6 +122,7 @@
     "sass-loader": "^10.0.5",
     "sass.js": "^0.11.1",
     "semver": "7.3.2",
+    "strapi-plugin-import-export-content": "^0.4.1",
     "style-loader": "1.3.0",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
