--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.3.0",
     "react-syntax-highlighter": "^15.4.4",
+    "remark-gfm": "^3.0.1",
     "remark-prism": "^1.3.6",
     "resolve": "1.18.1",
     "resolve-ts-aliases": "^1.0.1",
