--- a/package.json
+++ b/package.json
@@ -159,13 +159,20 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "eslint-plugin-testing-library": "^3.9.2",
-    "prettier": "2.3.1",
+    "husky": "^7.0.4",
+    "prettier": "^2.6.1",
     "prettier-plugin-sort-json": "^0.0.2",
+    "pretty-quick": "^3.1.3",
     "ts-toolbelt": "^9.6.0",
     "typescript": "^4.3.4",
     "vite": "^2.6.4",
     "vite-aliases": "^0.8.7",
     "vite-babel-plugin": "^0.0.2",
     "vite-plugin-react-svg": "^0.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
