--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,16 @@
 {
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "endOfLine": "auto",
   "importOrder": ["^src/(.*)$", "^components/(.*)$"],
   "jsonRecursiveSort": true,
+  "jsxBracketSameLine": true,
+  "jsxSingleQuote": false,
   "printWidth": 80,
+  "quoteProps": "as-needed",
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false
 }
