--- a/package.json
+++ b/package.json
@@ -130,6 +130,22 @@
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js, jsx}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{html,css,less,ejs}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@emotion/babel-plugin": "^11.3.0",
@@ -149,7 +165,7 @@
     "@typescript-eslint/parser": "^5.5.0",
     "@vitejs/plugin-react": "^1.0.0",
     "csstype": "^3.0.9",
-    "eslint": "^8.3.0",
+    "eslint": "^8.12.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
@@ -160,6 +176,7 @@
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "eslint-plugin-testing-library": "^3.9.2",
     "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
     "prettier": "^2.6.1",
     "prettier-plugin-sort-json": "^0.0.2",
     "pretty-quick": "^3.1.3",
@@ -169,10 +186,5 @@
     "vite-aliases": "^0.8.7",
     "vite-babel-plugin": "^0.0.2",
     "vite-plugin-react-svg": "^0.2.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
   }
 }
