--- a/package.json
+++ b/package.json
@@ -136,12 +136,12 @@
     }
   },
   "lint-staged": {
-    "*.{js, jsx}": [
+    "*.{ts, tsx}": [
       "prettier --write",
       "eslint --fix",
       "git add"
     ],
-    "*.{html,css,less,ejs}": [
+    "*.{html,css}": [
       "prettier --write",
       "git add"
     ]
